# elek_dekatron

./: .gitmodules  README.md
case/: Dekatron v12.f3d  Dekatron v12.step  dekatron_case.stl  dekatron_cover.stl  readme.txt
firmware/: CMakeLists.txt  gen-font-word.html  sdkconfig
firmware/components/usb-pd/: CMakeLists.txt  usbpd_esp.cpp  usbpd_esp.h
firmware/main/: CMakeLists.txt  dekatron.c  dekatron.h  io.c  io.h  main.c  root.html  snmpgetter.c  snmpgetter.h  snmppdu.c  snmppdu.h  webconfig.c  webconfig.h
pcb/: dekatron.kicad_pcb  dekatron.kicad_prl  dekatron.kicad_pro  dekatron.kicad_sch  fp-info-cache
